[package]
name = "rust"
version = "0.1.0"
authors = ["Elliana <me@mause.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
serenity = "*"
rustls = "*"
dotenv = "*"
postgres-native-tls = "*"
native-tls = "*"
bytes = "1"
tokio-pg-mapper-derive = "*"
tokio-pg-mapper = "*"
google_maps = { git = "https://github.com/headuck/google_maps" }
rust_decimal = "1.13.0"
log = "*"
tokio-compat-02 = "*"
simple_logger = "*"
deadpool-postgres = "*"
deadpool = "*"
rust_decimal_macros = "1.13.0"

[dev-dependencies]
reqwest = "0.11.3"
serde = "*"
serde_json = "*"
tokio-test = "*"
mockito = "*"
httparse = "*"
openssl = "*"
http = "*"
json = "*"
