[package]
name = "rust"
version = "0.1.0"
authors = ["Elliana <me@mause.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
serenity = "*"
rustls = "*"
dotenv = "*"
postgres-native-tls = "*"
native-tls = "*"
bytes = "1"
tokio-pg-mapper-derive = "*"
tokio-pg-mapper = "*"
google_maps = "2"
rust_decimal = "*"
log = "*"
simple_logger = "*"
deadpool-postgres = "0.7.0"
deadpool = "0.7"
lexical-core = { version = "=0.7.5" }                            # override to version that compiles on nightly

[dev-dependencies]
reqwest = "0.11.3"
serde = "*"
serde_json = "*"
tokio-test = "*"
mockito = "*"
httparse = "*"
openssl = "*"
http = "*"
json = "*"
