[package]
name = "mock_proxy"
license = "MIT"
description = "A simple way to mock out API's if you can set a proxy"
repository = "https://github.com/Mause/rust_playground/tree/master/mock_proxy"
authors = ["Elliana May"]
version = "0.1.2-rc.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
httparse = "1.4.1"
json = "0.12.4"
log = "0.4.14"
native-tls = "0.2.7"
openssl = "0.10.35"
